--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=America/Sao_Paulo
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+APP_PORT=8000
 FRONTEND_URL=http://localhost:3000
 
 APP_LOCALE=pt-BR
